deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: testaccountcsa/first_repo:test
