pod.yaml
apiVersion: apps/v1
kind: Pod
metadata:
  name: app-pod
  labels:
        name:app-pod
spec:
  containers:
  - name: app
    image: testaccountcsa/first_repo:test
    ports:
    - containerPort: 8080
