service.yaml
apiVersion: v1
kind: Service
metadata:
    name: service-test2
spec:
    selector:
        app: app-pod
    ports:
        - protocol: TCP
          port: 4040
          targetPort: 8080
